Archive2/4d/115d8bb85d50d2/output
main.cpp: In function ‘int main()’:
main.cpp:27:50: error: conversion from ‘call_operator’ to ‘const int&’ is ambiguous
     (void)static_cast<const int&>(call_operator());
                                                  ^
main.cpp:27:50: note: candidates are:
main.cpp:18:5: note: call_operator::operator int&() const
     operator int&() const {
     ^
main.cpp:11:5: note: call_operator::operator const int&() const
     operator const int&() const {
     ^
